# loomind-studio

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .rules  LICENSE  README.md  build_all.py  index.html  package-lock.json  package.json  turbo.json
.agents/: README.md
core/loomind-engine/: .env.example  README.md  build_exe.py  conftest.py  launcher.py  manage_experiences.py  pyproject.toml  requirements.txt  save_build_experiences.py  save_session_experiences.py  seed_data.py
core/loomind-engine/src/: __init__.py  client.py  config.py  main.py
core/loomind-engine/src/domain/: experience_service.py  models.py
core/loomind-engine/src/harness/: evaluator.py
core/loomind-engine/src/infrastructure/: agent_registry.py  auth_middleware.py  background_worker.py  cli_executor.py  cli_registry.py  embedder.py  event_bus.py  file_store.py  goal_store.py  llm_client.py  log_broadcaster.py  notification_service.py  qdrant_client.py  rate_limiter.py  readonly_filter.py  redaction.py  worktree_store.py
core/loomind-engine/src/presentation/: agents_router.py  ba_router.py  config_router.py  deliberation_router.py  evolve_router.py  experience_router.py  extract_router.py  gates_router.py  goals_router.py  graph_router.py  health_router.py  intercept_router.py  mcp_server.py  posttool_router.py  principles_router.py  route_router.py  stream_router.py  timeline_router.py  worktrees_router.py
core/loomind-engine/tests/: test_api.py  test_e2e.py  test_embedder.py  test_experience_service.py  test_harness_mcp.py  test_llm_client.py  test_models.py
(+179 files in other folders)
