[tool.poetry]
name = "loomind-engine"
version = "0.3.0"
description = "AI Experience Engine — Semantic search & feedback for AI coding agents"
authors = ["Loomind"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
pydantic = ">=2.10.0"
pydantic-settings = ">=2.7.0"
qdrant-client = ">=1.13.0"
torch = { version = ">=2.0.0", source = "pytorch-cpu" }
sentence-transformers = ">=3.4.0"
httpx = ">=0.28.0"
structlog = ">=25.1.0"
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
mcp = ">=0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.25.0"
pytest-cov = ">=6.0"
black = ">=25.0"
ruff = ">=0.9.0"
mypy = ">=1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
